# tg2qbit

./: .gitignore  README.md  config.example.env  pyproject.toml
.github/workflows/: ci.yml
docs/: systemd.md
packaging/systemd/: tg-qbit-bot.user.service
src/tg_qbit_bot/: __init__.py  __main__.py  app.py
